# geo-data-br

./: .gitignore  ChangeLog  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
geo_data_br/: points.py
geo_data_br/test/: test_feature1.py
prototype_notebooks/: 00_get_data.ipynb  01_produce_geo_dataframes.ipynb  02_produce_functions.ipynb
