# https://docs.openstack.org/pbr/latest/user/using.html
[metadata]
name = geo_data_br
author = Fred Israel
url= https://github.com/polvoazul/geo-data-br
download_url= https://github.com/polvoazul/geo-data-br
description-file = README.md
home-page = https://github.com/polvoazul/geo-data-br
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
keywords =
   datascience
   brazil
python_requires = >=3.7
